monitoring/ingressclass.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: gr
spec:
  controller: "k8s.io/ingress-nginx"
  parameters:
    apiGroup: networking.k8s.io
    kind: Ingress
    name: gr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gr
  namespace: monitoring
spec:
  ingressClassName: "gr"
  rules:
  - host: grafana.1buyway.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
